# RayNeo

./: .gitignore  Cargo.toml  install-service.sh  rayneo-streamer.service
android-client/: settings.gradle.kts
android-client/app/: build.gradle.kts
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/rayneo/client/: MainActivity.kt  OrientationFilter.kt  RayNeoProtocol.kt  RayNeoSession.kt  StreamClient.kt  XRRenderer.kt  XRVideoView.kt
android-client/app/src/main/res/values/: styles.xml
android-client/app/src/main/res/xml/: usb_device_filter.xml
android-client/gradle/: libs.versions.toml
rayneo-server/: Cargo.toml
rayneo-server/src/: capture.rs  display.rs  lib.rs  peer.rs  session.rs  signaling.rs  stream.rs
rayneo-streamer/: Cargo.toml
rayneo-streamer/src/: main.rs
rayneo-xr-runtime/: Cargo.toml
rayneo-xr-runtime/src/: compositor.rs  lib.rs  pose.rs
